共通でつかうCSSとヘッダー部分を作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <header>
+      <div class="appName">
+        スケジュール管理アプリ
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
