--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -16,3 +16,177 @@ header {
   line-height: 50px;
 }
 
+.container {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
+.indexTitle {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 18px;
+}
+
+.indexTitle-text {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.indexTitle-button {
+  color: #fff;
+  padding: 12px 20px; 
+  background-color: #2962ff;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.notice {
+  background-color: #000;
+  padding: 16px;
+  margin: 0 auto;
+  color: #fff;
+  width: fit-content;
+  border-radius: 4px;
+  position: absolute;
+  bottom: 24px;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+
+.schedules {
+  background-color: #fff;
+  margin-bottom: 40px;
+}
+
+.schedules th {
+  padding: 10px 16px;
+}
+
+.indexFooter {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 24px;
+}
+
+.indexFooter-count span {
+  font-weight: bold;
+}
+
+.indexFooter-date {
+  font-size: 14px;
+  color: #a2a2a4;
+}
+
+.newTitle {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 18px;
+}
+
+.newForm {
+  background-color: #fff;
+  padding: 24px;
+  font-size: 14px;
+}
+
+.form-wrap {
+  margin-bottom: 16px;
+}
+
+.form-label {
+  font-weight: bold;
+  margin-bottom: 8px;
+  display: block;
+}
+
+.form-input {
+  border: 1px solid #ced4da;
+  display: block;
+  padding: 6px 12px;
+  line-height: 1.5;
+  border-radius: 4px;
+  width: 100%;
+}
+
+.form-date::-webkit-calendar-picker-indicator {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+
+.form-date::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+}
+
+.form-date::-webkit-clear-button{
+  -webkit-appearance: none;
+}
+
+.form-date {
+ 
+  position: relative;
+}
+
+
+
+.form-checkBox {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  vertical-align: -5px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.form-checkBox:checked {
+  background-color: #2962ff;
+}
+
+.form-checkBox:checked:before {
+  position: absolute;
+  top: 4px;
+  left: 8px;
+  transform: rotate(50deg);
+  width: 4px;
+  height: 8px;
+  border-right: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+  content: '';
+}
+
+.form-text {
+  padding: 12px;
+  height: 124px;
+}
+
+.form-submit {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.form-cancel {
+  border: 1px solid #ced4da;
+  padding: 12px 20px;
+  font-weight: bold;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+
+.form-save {
+  padding: 12px 20px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #2962ff;
+}
