--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Schedules#index</h1>
-<p>Find me in app/views/schedules/index.html.erb</p>
+<div class="container">
+  <div class="indexTitle">
+    <h2 class="indexTitle-text">予定一覧</h2>
+    <%= link_to "新規追加",:new_schedule,class: "indexTitle-button" %>
+  </div>
+  <table class="schedules">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>タイトル</th>
+        <th>開始日</th>
+        <th>終了日</th>
+        <th>終日</th>
+        <th>更新日時</th>
+      </tr>
+    </thead>
+    
+    <tbody>
+      <% @schedules.each do |schedule| %>
+        <tr>
+          <td><%= schedule.id %></td>
+          <td><%= schedule.title %></td>
+          <td><%= schedule.start_date.to_s(:ymd) %></td>
+          <td><%= schedule.end_date.to_s(:ymd) %></td>
+          <% if schedule.all_day == true %>
+            <td>○</td>
+          <% elsif schedule.all_day == false %>
+            <td></td>
+          <% end %>
+          <td><%= schedule.created_at.to_s(:ymdhm) %></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="indexFooter">
+    <p class="indexFooter-count">予定合計 <span><%= @schedules.count %></span>件</p>
+    <p class="indexFooter-date">本日の日付 <%= @today %></p>
+  </div>
+  <% if flash[:notice] %>
+   <p class="notice"><%= flash[:notice] %></p>
+  <% end %>
+</div>
