予定詳細ページへのリンクと予定詳細ページを作成

--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -28,7 +28,7 @@
             <td></td>
           <% end %>
           <td><%= schedule.created_at.to_s(:ymdhm) %></td>
-          <td></td>
+          <td><%= link_to "詳細", schedule %></td>
           <td></td>
           <td></td>
         </tr>
