--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -62,6 +62,10 @@ header {
   margin-bottom: 40px;
 }
 
+.schedules a {
+  color: #2962ff;
+}
+
 .schedules th {
   padding: 10px 16px;
 }
@@ -190,3 +194,45 @@ header {
   color: #fff;
   background-color: #2962ff;
 }
+
+.showButton {
+  color: #2962ff;
+  display: block;
+  margin-bottom: 15px;
+}
+
+.showTitle {
+  margin-bottom: 18px;
+}
+
+.showTitle-text {
+  font-weight: bold;
+}
+
+.showSchedules {
+  border: 1px solid #dee2e6;
+  width: 100%;
+}
+
+.showSchedules-container {
+  background-color: #fff;
+  padding: 24px;
+}
+
+.showSchedules tr {
+  border: 1px solid #dee2e6;
+}
+
+
+.showSchedules th {
+  background-color: #f7f9fc;
+  padding: 20px 16px;
+  width: 144px;
+}
+
+.showSchedules td {
+  background-color: #fff;
+  padding: 20px 16px;
+  display: block;
+}
+
