--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,2 +1,35 @@
-<h1>Schedules#show</h1>
-<p>Find me in app/views/schedules/show.html.erb</p>
+<div class="container">
+  
+  <%= link_to "一覧に戻る", :schedules, class: "showButton" %>
+   
+  <div class="showTitle">
+    <h2 class="showTitle-text"><%= @schedule.title %></h2>
+  </div>
+
+  <div class="showSchedules-container">
+    <table class="showSchedules">
+      <tr>
+        <th>開始日</th>
+        <td><%= @schedule.start_date.to_s(:ymd) %></td>
+      </tr>
+      <tr>
+        <th>終了日</th>
+        <td><%= @schedule.end_date.to_s(:ymd) %></td>
+      </tr>
+      <tr>
+        <th>終日</th>
+        <% if @schedule.all_day == true %>
+          <td>○</td>
+        <% elsif @schedule.all_day == false %>
+          <td></td>
+        <% end %>
+      </tr>
+      <tr>
+        <th>スケジュールメモ</th>
+        <td><%= @schedule.memo %></td>
+      </tr>
+    </table>
+  </div>
+
+  
+</div>
