スケジュールを削除する機能を作成

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -60,6 +60,7 @@ header {
 .schedules {
   background-color: #fff;
   margin-bottom: 40px;
+  width: 100%;
 }
 
 .schedules a {
@@ -68,6 +69,10 @@ header {
 
 .schedules th {
   padding: 10px 16px;
+}
+
+.schedules td {
+  padding: 20px 16px;
 }
 
 .indexFooter {
