--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -30,7 +30,7 @@
           <td><%= schedule.created_at.to_s(:ymdhm) %></td>
           <td><%= link_to "詳細", schedule %></td>
           <td><%= link_to "編集", [:edit, schedule] %></td>
-          <td></td>
+          <td><%= link_to "削除", schedule, method: :delete, data: { confirm: "本当に削除しますか？" } %></td>
         </tr>
       <% end %>
     </tbody>
