バリデーションを追加し、エラーメッセージも表示される ように編集

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2,6 +2,12 @@ body {
   background-color: #f6f6f6;
 }
 
+.required::after {
+  content: " *";
+  color: red;
+  vertical-align: middle;
+}
+
 header {
   background-color: #1c1d3b;
   text-align: center;
