--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,19 +1,21 @@
 <div class="container">
   <h2 class="newTitle">予定の新規追加</h2>
 
+  <%= render "shared/error", obj: @schedule %>
+
   <%= form_with model: @schedule,class: :newForm do |f| %>
     <div class="form-wrap">
-      <%= f.label :title ,"タイトル",class: "form-label" %>
+      <%= f.label :title ,"タイトル",class: "form-label required" %>
       <%= f.text_field :title,class: "form-input",placeholder: "タイトル" %>
     </div>
 
     <div class="form-wrap">
-      <%= f.label :start_date ,"開始日",class: "form-label" %>
+      <%= f.label :start_date ,"開始日",class: "form-label required" %>
       <%= f.date_field :start_date,class: "form-input form-date",placeholder: "----/--/--" %>
     </div>
     
     <div class="form-wrap">
-      <%= f.label :end_date ,"終了日",class: "form-label" %>
+      <%= f.label :end_date ,"終了日",class: "form-label required" %>
       <%= f.date_field :end_date,class: "form-input form-date",placeholder: "----/--/--" %>
     </div>
 
