--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -27,7 +27,7 @@
           <% elsif schedule.all_day == false %>
             <td></td>
           <% end %>
-          <td><%= schedule.created_at.to_s(:ymdhm) %></td>
+          <td><%= schedule.updated_at.to_s(:ymdhm) %></td>
           <td><%= link_to "詳細", schedule %></td>
           <td><%= link_to "編集", [:edit, schedule] %></td>
           <td><%= link_to "削除", schedule, method: :delete, data: { confirm: "本当に削除しますか？" } %></td>
